// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Customer TitleWrapper should render custom link because it is set 1`] = `
<div>
  <span
    class="expandAll"
    title="Fold all"
  >
    <i
      class="material-icons"
    >
      unfold_less
    </i>
  </span>
  <span
    class="container"
  >
    <img
      alt="Recharge"
      class="container"
      src="test-file-stub"
      style="background-color: rgba(0, 0, 0, 0);"
    />
    Recharge
    <span
      class="container"
    >
      <a
        href="https://gorgias.io/a8s4d86as54d/"
        rel="noopener noreferrer"
        target="_blank"
      />
    </span>
  </span>
   
</div>
`;

exports[`Customer TitleWrapper should render default link because no custom link is set 1`] = `
<div>
  <span
    class="expandAll"
    title="Fold all"
  >
    <i
      class="material-icons"
    >
      unfold_less
    </i>
  </span>
  <span
    class="container"
  >
    <img
      alt="Recharge"
      class="container"
      src="test-file-stub"
      style="background-color: rgba(0, 0, 0, 0);"
    />
    Recharge
    <span
      class="container"
    >
      <a
        href="https://mystore-sp.admin.rechargeapps.com/admin/customers/a8s4d86as54d/subscriptions/"
        rel="noopener noreferrer"
        target="_blank"
      />
    </span>
  </span>
   
</div>
`;
